--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@ Licensed under MIT
                                         real-world engineering challenges. But wait !! there is a SURPRISE in this year's edition which is <strong>PitchHack </strong>
                                         <br>
                                         <br>
-                                        <strong style="font-weight: bold;color:#fc4619;">PitchHack : </strong>We, as computer engineering students, want to bring all fields together to innovate and find solutions to the problems that weaken humanity.
+                                        <strong style="font-weight: bold;color:#fc4619;">PitchHack : </strong>
                                         In this context, PitchHack is a new kind of marathon where teams choose a problem related to our theme, develop an adequate solution then make a pitch to present their work in front of our juries. The challenge is open for students
                                          and enthusiasts from any field
                                         <br>
@@ -704,7 +704,7 @@ Licensed under MIT
                                 <thead>
                                     <tr>
                                         <th>
-                                            <strong>December 03, 2022</strong>
+                                            <strong>December 02, 2023</strong>
                                         </th>
                                     </tr>
                                 </thead>
@@ -791,7 +791,7 @@ Licensed under MIT
                                 <thead>
                                     <tr>
                                         <th>
-                                            <strong> December 04,2022</strong>
+                                            <strong> December 03,2023</strong>
                                         </th>
                                     </tr>
                                 </thead>
@@ -845,8 +845,8 @@ Licensed under MIT
                         <div class="col-md-4">
                             <h4 style="font-weight: bold;color:#fc4619;">Does this cost money?</h4>
                             <p>
-                                Yes, 30 dinars  by team (for the hackathon competition)
-                                and 10 dinars by team (for the PitchHack competition) . 
+                                Yes, 45 dinars  by team (for the hackathon competition)
+                                and 20 dinars by team (for the PitchHack competition) . 
 
                             </p>
                         </div>
@@ -1018,7 +1018,7 @@ Licensed under MIT
                             <div class="block-heading block-heading-centralized this-animate" data-animate="fadeInDown">
                             <br>
                                     <center>
-                                        <h4>TuniHack Registration Form</h4>
+                                        <h4>TuniHack 9.0 Registration Form</h4>
                                     </center>
                                     <br>
                                     <br>
@@ -1032,7 +1032,7 @@ Licensed under MIT
                 <center>
 
                     <iframe id="applyyy"
-                    src="https://docs.google.com/forms/d/e/1FAIpQLSdsSJsDgxB4h9r1G4TGNyYofAEGCjy-Vs9z5HQORo8k6CYozg/viewform?fbclid=IwAR2Y9sV2to1kc5lQnECymEkYTAfv3MleJMDprZXS8cmkPX2LdCI3oMpsoXQ"
+                    src="https://docs.google.com/forms/d/e/1FAIpQLSe6U41h7wrHhRj8lX7oY-lwdZ0a47wNxieleBSrUg1YJXEwqg/viewform"
                     style="margin-top:20px;margin-bottom: 20px;" width="80%" height="600px" frameborder="0"
                         marginheight="0" marginwidth="0"></iframe>
 
@@ -1121,7 +1121,7 @@ Licensed under MIT
                                         </p>
                                         <p>
                                             <strong>
-                                                <span class="fa fa-phone"></span> Phone: </strong>53 224 190-56 044 142</p>
+                                                <span class="fa fa-phone"></span> Phone: </strong>95 288 002</p>
                                         <p>
                                             <strong>
                                                 <span class="fa fa-envelope"></span> E-mail: </strong>
@@ -1158,7 +1158,7 @@ Licensed under MIT
 
                         <!-- copyright -->
                         <div class="copyright">
-                            2022 OSSEC
+                            2023 OSSEC
                             <a href="http://ossec.tn/"></a>
                         </div>
                         <!-- ./copyright -->
